<resources>
    <string name="app_name">My Application</string>
    <string name="title_home">Homs</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_navigation_menu">Меню</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_watch_later_title">Прочитать позже</string>
    <string name="menu_selections_title">Подборки</string>
    <string name="menu_settings_title">Настройки</string>
    <string name="menu_favorites_title">Избранное</string>
    <string name="menu_home_title_text">Главная</string>
    <string name="recently_viewed_title">Недавно просмотренные</string>
    <string name="notification_cancel">cancel</string>
    <string name="time">Напомнить</string>
    <string name="radio_button_popular">Популярные</string>
    <string name="radio_button_top_rated">Топ</string>
    <string name="radio_button_upcoming">Скоро</string>
    <string name="radio_button_playing">В магазинах</string>
    <string name="radio_group_header">Подборка на главном экране:</string>
</resources>